- [RIGGING] added button "Create Curve From Trajectory" as a draft tool
- [OVERLAPPY] reworked main script
- [OVERLAPPY] separated rig creation buttons for point, aim and combo
- [OVERLAPPY] reworked aim offset UI
- [OVERLAPPY] added loop cycles in option menu
- [OVERLAPPY] moved nucleus timeScale slider to separate panel
- [OVERLAPPY] added nucleus gravity settings

v1.2.6
- added to Settings.py file default value for "checkboxEulerFilter".

v1.2.5
- [OVERLAPPY] added confirm dialog for zero particle offset.
- [UTILS] added draft annotation creation logic.
- [UI] replaced button icon change approach, now simply use Help/Change Icon for toggling icons.
- [UI] added "Options" menu with euler filter checkbox.
- [UI] moved "To Shelf" menu to the new "Options" menu.
- [UI] changed the color of the black panel to a lighter color (0.00 => 0.13).
- added connection between base class instance and sub classes.
- improved euler filter method for using after animation baking.

v1.1.0
- [CRITICAL] fixed compatibility with Maya 2025.
- [RIGGING] added "Extract Shapes" logic from blendshapes.
- [UI] added button icon change on highlight.
- [UI] added alternative secret meme icon (need to activate in Settings "useFaceIcon = True").
- improved cache evaluator detection.
- moved Settings script to the root folder.
- general refactoring.

v1.0.5
- fixed motion trails to shelf button.
- decreased hardcode in Drag and Drop logic.
- reworked Button Install module.
- [UI] added tear-off to sub menus
- [UTILS] added toggle buttons for active viewport.
- [UTILS] added "Print Blendshapes Base Nodes".
- [UTILS] added "Print Blendshapes Names".
- [RIGGING] added wraps button.
- [RIGGING] added blendshapes reconstruct button.
- [RIGGING] added "Zero Blendshapes Weights" button.

v1.0.4
- [OVERLAPPY] reworked Nucleus implementation with non-destructive way.
- [UTILS] added simple SelectHierarchy method.
- refactored code style.

v1.0.3
- absolute import replaced by relative import.